<resources>
    <string name="app_name">Baby Count</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <string name="title_activity_add_record">记录</string>
    <string name="title_activity_add_category">添加分类</string>
    <string name="title_activity_select_source">选择Source</string>
    <string name="title_activity_add_person">添加人物</string>
    <string name="title_activity_select_target">选择Target</string>
    <string name="title_activity_add_place">添加地点</string>
    <string name="title_activity_select_place">选择地点</string>
    <string name="title_activity_watch_category">查看分类</string>
    <string name="title_activity_edit_category">编辑分类</string>
    <string name="title_activity_record_detail">记录</string>

    <string name="Category_Already_Exists">该分类已存在</string>
    <string name="Place_Already_Exists">该地点已存在</string>

    <string name="Common_Add_Successful">添加成功</string>
    <string name="Common_Update_Successful">修改成功</string>
    <string name="Category_Category">分类</string>
    <string name="Category_Name">名称</string>
    <string name="Category_Desc">描述</string>
    <string name="Category_Place">地点</string>
    <string name="Category_Source">Source</string>
    <string name="Category_Target">Target</string>
    <string name="Category_Unit">单位</string>
    <string name="Category_Single">单次事件</string>
    <string name="Category_Count_F">%1$s个分类</string>
    <string name="Place_Count_F">%1$s个地点</string>
    <string name="Person_Count_F">%1$s个人物</string>
    <string name="Record_Count_F">%1$s条记录</string>
    <string name="Place_Location">位置</string>
    <string name="Place_Place">地点</string>
    <string name="Person_Avatar">头像</string>
    <string name="Person_Person">人物</string>
    <string name="Place_Select_None">暂不选择</string>
    <string name="CATEGORY_IS_EMPTY">还未添加种类</string>
    <string name="Common_Not_Null">不可为空</string>
    <string name="Common_Sure">确定</string>
    <string name="Common_Cancel">取消</string>
    <string name="Common_Go_To_Add">去添加</string>
    <string name="Common_Use_Immediately">立即使用</string>
    <string name="Record_Add">+</string>
    <string name="Record_Value">数据</string>
    <string name="Menu_Home">首页</string>
    <string name="Menu_Count">统计</string>
    <string name="Menu_Category">查看</string>
    <string name="Menu_DashBoard">面板</string>
    <string name="Menu_Setts">设置</string>
    <string name="Menu_Info">关于</string>
    <string name="Menu_Mine">我的</string>
    <string name="Common_Age">年龄：</string>
    <string name="Common_Edit">编辑</string>
    <string name="Common_Watch">查看</string>
    <string name="Common_No_Desc">没有描述</string>
    <string name="Common_Date">日期</string>
    <string name="Common_Time">时间</string>
    <string name="Common_No_Data_tips">暂无数据, 点击添加第一个吧！</string>

</resources>
