<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_nav_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Menu_Home" />
        <item
            android:id="@+id/main_nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/Menu_DashBoard" />
        <item
            android:id="@+id/main_nav_count"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/Menu_Count" />
        <item
            android:id="@+id/main_nav_mine"
            android:icon="@drawable/ic_person_grey_24dp"
            android:title="@string/Menu_Mine" />
    </group>

    <item android:title="@string/Menu_Info">
        <menu>
            <item
                android:id="@+id/main_nav_setts"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/Menu_Setts" />
            <item
                android:id="@+id/main_nav_info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/Menu_Info" />
        </menu>
    </item>

</menu>
