<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="club.veev.babycount.place.AddPlaceActivity"
    tools:showIn="@layout/activity_add_place">

    <RelativeLayout
        android:id="@+id/add_place_relative_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/add_place_image_name"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_name_grey_24dp" />

        <EditText
            android:id="@+id/add_place_edit_name"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/add_place_image_name"
            android:background="@null"
            android:textColorHint="@color/colorTextState"
            android:textColor="@color/colorTextPrimary"
            android:gravity="center_vertical|start"
            android:textSize="@dimen/text_size_body"
            android:hint="@string/Category_Name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1" />

        <View
            android:id="@+id/add_place_view_name"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_place_edit_name"
            android:layout_alignStart="@+id/add_place_edit_name"
            android:background="@color/colorDivider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_place_relative_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/add_place_image_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_place_grey_24dp" />

        <EditText
            android:id="@+id/add_place_edit_location"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/add_place_image_location"
            android:background="@null"
            android:textColorHint="@color/colorTextState"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_body"
            android:hint="@string/Place_Location"
            android:gravity="center_vertical|start"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1" />

        <View
            android:id="@+id/add_place_view_location"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_place_edit_location"
            android:layout_alignStart="@+id/add_place_edit_location"
            android:background="@color/colorDivider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_place_relative_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/add_place_image_desc"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_description_grey_24dp" />

        <TextView
            android:id="@+id/add_place_text_desc"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/add_place_image_desc"
            android:textSize="@dimen/text_size_body"
            android:gravity="center_vertical|start"
            android:hint="@string/Category_Desc"
            android:textColorHint="@color/colorTextState"
            android:textColor="@color/colorTextPrimary"
            android:maxLines="2"
            android:ellipsize="end"/>

        <View
            android:id="@+id/add_place_view_desc"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_place_text_desc"
            android:layout_alignStart="@+id/add_place_text_desc"
            android:background="@color/colorDivider" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_place_relative_use_immediately"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/add_place_image_use_immediately"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_access_time_grey_24dp" />

        <TextView
            android:id="@+id/add_place_text_use_immediately"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/add_place_image_use_immediately"
            android:textSize="@dimen/text_size_body"
            android:gravity="center_vertical|start"
            android:text="@string/Common_Use_Immediately"
            android:textColor="@color/colorTextState"
            android:maxLines="2"
            android:ellipsize="end"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/add_place_switch_use_immediately"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add_place_text_use_immediately"
            android:layout_alignBottom="@+id/add_place_text_use_immediately"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/add_place_view_use_immediately"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_place_text_use_immediately"
            android:layout_alignStart="@+id/add_place_text_use_immediately"
            android:background="@color/colorDivider" />
    </RelativeLayout>
</LinearLayout>
